# target-channeldock-v2

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml
target_channeldock/: __init__.py  auth.py  client.py  sinks.py  target.py
tests/: __init__.py  test_core.py
