[tool.poetry]
name = "target-channeldock"
version = "0.0.1"
description = "`target-channeldock` is a Singer target for ChannelDock, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Optiply <dev@optiply.nl>"]
keywords = [
    "ELT",
    "ChannelDock",
]
license = "Apache-2.0"
packages = [
    { include = "target_channeldock" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
target-hotglue = {git = "https://gitlab.com/hotglue/target-hotglue-sdk.git"}
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["target_channeldock"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["target_channeldock"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-channeldock = 'target_channeldock.target:TargetChannelDock.cli'
